app/assets/stylesheets/static_pages.scss
// Place all the styles related to the StaticPages controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

html, body {
	padding: 0;
	margin: 0;
}
	
/* Fixed header w AH Logo at top */
#ahtitle {
	position: fixed;
	padding-top: 10px; 
	/* Remove padding-top:10px to match layout when served from file directly */
	top: 0px;
	left: 0px;
	width: 100%;
	height: 80px;
	color: red;
	background-color: rgba(255, 255, 255, 0.75);
	box-shadow: 5px 5px 5px #888888;
	font-size: 20pt;
	z-index: 1000;
}

#ahtitleimg {
	display: block;
	width: 500px; /* 480px to match size when served from file directly */
	background: transparent;
	margin-left: auto;
	margin-right: auto;
	padding: 10px 10px 10px 10px;
	/* 20px 10px 10px 10px to match size when served from file directly */
}


/* below needed to prevent scrollbars when the bg image is scaled larger
 * than the DOM window in one or both directions */
#bgimgcontainer {
	position: relative;
	width: 100%;
	height: 100%;
	overflow: hidden;
}

/* position needed so that a negative .left value can be used to 
 * center image when it's wider than the DOM */
#bgimg {
	position: relative; 
}

/* Start: Address input bar with search button */

#ahadsubtitlebox {
	position: absolute;
	top: 40%;
	margin-left: 20%;
	margin-right: 20%;
	width: calc(60% - 28px); 
	/* -10 px for borders, -18 px for scrollbar width
	 * When served directly from file, and not via rails,
	 * this was not needed.  ?!?
	 */
	color: white;
	background-color: white;
}

#ahadsubtitle {
	position: absolute;
	width: 100%;
	top: 0px;
	text-align: center;
	font-size: 30pt;
	
	font-family: 'Open Sans Condensed', sans-serif;
	color: white;
	background-color: rgba(55,55,55,.5);
	border-radius: 15px;
	padding: 10px;
	border-color: rgba(255,255,255,.9);
	border-width: 5px;
	border-style: solid;
	padding-bottom: 25px;
}

@media screen and (max-width: 580px) {
	#ahadsubtitlebox {
		margin-left: 0;
		margin-right: 0;
		width: calc(100% - 28px); 
		/* 10 px for borders, 18 px for scrollbar 
		 * When served directly from file, and not via rails,
		 * this was not needed.  ?!?
		 */
	}}

#inputcontainer {
	position: relative;
	padding-top: 10px;
	font-size: initial;
	width: 100%;
	margin-left: auto;
	margin-right: auto;
}
	
#textboxcontainer {
	display: inline-block;
	width: calc(100% - 130px); /* to make room for search button */

	margin-right: auto;
	margin-left: auto;

	float:left;
}

#inputid {
	width: 100%;

	font-size: 24px; 
	border-radius: 5px 0px 0px 5px;
	border-width: 0px;
	color: rgb(80, 80, 80);
}

#buttoncontainer {
	display: inline-block;
	width: 125px; /* keep in sync with width in #textboxcontainer */
}

#buttonid {
	min-width: 130px;
	max-width: 130px;
	height: 28px;
	font-size: 20px;
	font-family: 'Open Sans Condensed', sans-serif;
	
	border-radius: 5px 5px 5px 5px;
	border-width: 0px;

	background-color: hsl(360, 95%, 38%);
	color: white;
}

#buttontext {
	cursor: pointer;
}

#buttonid:hover {
    background-color: #ff0000; 
	color: white;
}

/* below 4 sections used for animating Search >> button */

#buttonid span {
	cursor: pointer;
	display: inline-block;
	position: relative;
	transition: 0.5s;
}

#buttonid span:after {
	content: '»';
	position: absolute;
	opacity: 0;
	top: 0;
	right: -20px;
	transition: 0.5s;
}

#buttonid:hover span {
	padding-right: 25px;
}

#buttonid:hover span:after {
	opacity: 1;
	right: 0;
}

/* End: Address input bar with search button */

select:invalid { color: gray; }

.select2-container--default .select2-selection--single{
	width		: 100%;

	text-align	: left;
	font-size	: 1.2em;
	font-weight	: bold;
}

@media screen and (max-width: 580px) {
	#ahtitleimg {
		width: 90%;
	}

	/* When screen gets small, make select2 100% wide, with
	 * search box centered below it.
	 */
	#textboxcontainer {
		width: 100%;
	}

	#buttoncontainer {
		display		: block;
		margin-left	: auto;
		margin-right: auto;
	}
}

